--- a/index.html
+++ b/index.html
@@ -8,23 +8,35 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header class="header">
-    <h1>♟️ Huấn luyện ghi nhớ quân cờ</h1>
-    <p>Thử thách trí nhớ & phản xạ thị giác của bạn</p>
-  </header>
-
   <main class="main">
+    <div id="status-display">
+      <span id="game-status">Sẵn sàng</span>
+      <span id="timer">60s</span>
+    </div>
+
     <section class="board-section">
       <div id="board"></div>
+      <div id="toggleOriginalBtn" title="Hiện/ẩn thế cờ gốc">👁</div>
     </section>
 
     <section class="control-section">
+      <label for="timeInput">Thời gian (giây):</label>
+      <input id="timeInput" type="number" min="5" max="300" value="60" class="time-input" />
+
       <label for="countRange">Số quân: <span id="countLabel">8</span></label>
-      <input id="countRange" type="range" min="1" max="32" value="8">
+      <input id="countRange" type="range" min="1" max="32" value="8" />
+
+      <div id="piece-selection-bar" style="display: none;">
+        <div id="piece-options"></div>
+        <button id="toggleColorBtn" class="btn secondary">Đổi thành quân Đen</button>
+      </div>
+
       <div class="btn-group">
-        <button id="randomBtn" class="btn primary">🎲 Random</button>
-        <button id="flipBtn" class="btn secondary">⬆️⬇️ Flip Board</button>
+        <button id="randomBtn" class="btn primary">🎲 Random & Bắt đầu</button>
+        <button id="flipBtn" class="btn secondary">🔄 Đổi tọa độ</button>
         <button id="clearBtn" class="btn secondary">🧹 Clear</button>
+        <button id="checkBtn" class="btn primary">✅ Kiểm tra</button>
+        <button id="viewOriginalBtn" class="btn secondary" style="display:none;">👁 Xem lại thế cờ gốc</button>
       </div>
     </section>
   </main>
