--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </section>
   </main>
 
-  <footer>
+  <footer style="font-family: 'Times New Roman'; font-size: medium;">
     © 2025 | Thiết kế bởi Minh Đạt – Chess Memory Trainer
   </footer>
 
